syntax = "proto3";

package contextfinder;

import "google/protobuf/struct.proto";

service ContextFinder {
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc GetHealth(HealthRequest) returns (HealthResponse);
  rpc TriggerIndex(TriggerIndexRequest) returns (TriggerIndexResponse);
  rpc Command(CommandRequest) returns (CommandResponse);
}

message SearchRequest {
  string query = 1;
  uint32 limit = 2;
}

message SearchResult {
  string file = 1;
  double score = 2;
  int32 start_line = 3;
  int32 end_line = 4;
  repeated RelatedChunk related = 5;
}

message SearchResponse {
  repeated SearchResult results = 1;
}

message RelatedChunk {
  string file = 1;
  int32 start_line = 2;
  int32 end_line = 3;
  repeated string relationship = 4;
  uint32 distance = 5;
  double relevance = 6;
}

message HealthRequest {}

message HealthResponse {
  bool has_watcher = 1;
  bool indexing = 2;
  uint64 last_success_unix_ms = 3;
  uint64 last_duration_ms = 4;
  uint32 consecutive_failures = 5;
  uint64 pending_events = 6;
  string last_error = 7;
  double files_per_second = 8;
  uint64 index_size_bytes = 9;
  uint64 duration_p95_ms = 10;
  string alert_log_json = 11;
}

message TriggerIndexRequest {
  string reason = 1;
}

message TriggerIndexResponse {
  bool accepted = 1;
  string message = 2;
}

message CommandRequest {
  string action = 1;
  google.protobuf.Struct payload = 2;
  google.protobuf.Struct config = 3;
}

message CommandResponse {
  string status = 1;
  string message = 2;
  repeated Hint hints = 3;
  google.protobuf.Struct data = 4;
  google.protobuf.Struct meta = 5;
}

message Hint {
  string type = 1;
  string text = 2;
}
